compiler warnings (casts, access to static, forgotten valueOf,..), (#1262)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>